# weather-landscape

./: .gitignore  Cargo.toml  README.md  cfg.toml.example
.github/workflows/: build-image.yaml  esp32-ci.yml  release-image.yaml  server-ci.yml
esp32/: .gitignore  Cargo.toml  cfg.example.toml  cfg.toml.example  sdkconfig.defaults
esp32/.cargo/: config.toml
esp32/src/: http.rs  main.rs  wifi.rs
server/: Cargo.toml  Dockerfile  config.example.toml  config.toml.example  docker-compose.yaml
server/src/: app.rs  config.rs  error.rs  graphics.rs  main.rs  preset.rs  render.rs  sun.rs  weather.rs
server/src/graphics/: curve.rs  img.rs  mod.rs  sprites.rs  util.rs
server/src/graphics/data/sprites/: README.md
src/: http.rs  main.rs  wifi.rs
