[package]
name = "esp32-landscape-weather"
version = "0.1.0"
authors = ["martinohmann <martinohmann@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp32-landscape-weather"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-hal/native", "esp-idf-svc/native", "epd-waveshare/graphics"]

pio = ["esp-idf-hal/pio", "esp-idf-svc/pio"]
std = ["alloc", "esp-idf-hal/binstart", "esp-idf-hal/std", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-hal/alloc", "esp-idf-svc/alloc"]
nightly = ["esp-idf-hal/nightly", "esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-hal/embassy-sync", "esp-idf-hal/critical-section", "esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
anyhow = "1.0.86"
embedded-graphics = "0.8.1"
epd-waveshare = { git = "https://github.com/caemor/epd-waveshare", features = ["graphics"] }
esp-idf-hal = { version = "0.44.1", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }
log = { version = "0.4", default-features = false }
toml-cfg = "0.1.3"

[build-dependencies]
embuild = "0.32.0"
toml-cfg = "0.1.3"
