[package]
name = "weather-landscape-server"
version = "0.1.0"
authors = ["martinohmann <martinohmann@gmail.com>"]
repository = "https://github.com/martinohmann/weather-landscape"
edition = "2024"

[dependencies]
actix-web = "4.9.0"
epd-waveshare = { git = "https://github.com/caemor/epd-waveshare", rev = "1244f035", features = ["graphics"] }
mime = "0.3.17"
rand = "0.8.5"
image = "0.25.2"
thiserror = "1.0.64"
embedded-graphics = "0.8.1"
monsoon = "0.1.1"
tower = { version = "0.5.1", features = ["limit", "util"] }
jiff = { version = "0.1.13", features = ["serde"] }
sun = "0.3.1"
config = "0.14.0"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
imageproc = "0.25.0"
actix-web-prom = "0.9.0"
prometheus = "0.13.4"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
