[package]
name = "weather-landscape-server"
version = "0.1.0"
authors = ["martinohmann <martinohmann@gmail.com>"]
repository = "https://github.com/martinohmann/weather-landscape"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
epd-waveshare = { git = "https://github.com/caemor/epd-waveshare", rev = "1244f035", features = ["graphics"] }
mime = "0.3.17"
rand = "0.9.1"
image = "0.25.6"
thiserror = "2.0.12"
embedded-graphics = "0.8.1"
monsoon = "0.1.1"
tower = { version = "0.5.2", features = ["limit", "util"] }
jiff = "0.2.14"
sun = "0.3.1"
config = "0.15.11"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
imageproc = "0.25.0"
actix-web-prom = "0.10.0"
prometheus = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
